feat: add society invite links
- regenerated frontend api clients and models
- add creation and display of society invite links
