# src/BindingChaos.Web/src/api/models/ApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponse.ts
@@ -1,0 +1,73 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * BindingChaos.Web.Gateway
+ * BindingChaos Web Gateway API
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { SocietyInviteLinkViewResponse } from './SocietyInviteLinkViewResponse';
+import {
+    SocietyInviteLinkViewResponseFromJSON,
+    SocietyInviteLinkViewResponseFromJSONTyped,
+    SocietyInviteLinkViewResponseToJSON,
+    SocietyInviteLinkViewResponseToJSONTyped,
+} from './SocietyInviteLinkViewResponse';
+
+/**
+ * 
+ * @export
+ * @interface ApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponse
+ */
+export interface ApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponse {
+    /**
+     * Gets or sets the response data.
+     * @type {Array<SocietyInviteLinkViewResponse>}
+     * @memberof ApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponse
+     */
+    data?: Array<SocietyInviteLinkViewResponse> | null;
+}
+
+/**
+ * Check if a given object implements the ApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponse interface.
+ */
+export function instanceOfApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponse(value: object): value is ApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponse {
+    return true;
+}
+
+export function ApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponseFromJSON(json: any): ApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponse {
+    return ApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponseFromJSONTyped(json, false);
+}
+
+export function ApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): ApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'data': json['data'] == null ? undefined : ((json['data'] as Array<any>).map(SocietyInviteLinkViewResponseFromJSON)),
+    };
+}
+
+export function ApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponseToJSON(json: any): ApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponse {
+    return ApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponseToJSONTyped(json, false);
+}
+
+export function ApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponseToJSONTyped(value?: ApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'data': value['data'] == null ? undefined : ((value['data'] as Array<any>).map(SocietyInviteLinkViewResponseToJSON)),
+    };
+}
+
