# src/BindingChaos.Web/src/api/models/ApiResponseOfTrustInviteLinkCreatedResponse.ts
@@ -1,73 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * BindingChaos.Web.Gateway
- * BindingChaos Web Gateway API
- *
- * The version of the OpenAPI document: 1.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { mapValues } from '../runtime';
-import type { TrustInviteLinkCreatedResponse } from './TrustInviteLinkCreatedResponse';
-import {
-    TrustInviteLinkCreatedResponseFromJSON,
-    TrustInviteLinkCreatedResponseFromJSONTyped,
-    TrustInviteLinkCreatedResponseToJSON,
-    TrustInviteLinkCreatedResponseToJSONTyped,
-} from './TrustInviteLinkCreatedResponse';
-
-/**
- * 
- * @export
- * @interface ApiResponseOfTrustInviteLinkCreatedResponse
- */
-export interface ApiResponseOfTrustInviteLinkCreatedResponse {
-    /**
-     * 
-     * @type {TrustInviteLinkCreatedResponse}
-     * @memberof ApiResponseOfTrustInviteLinkCreatedResponse
-     */
-    data?: TrustInviteLinkCreatedResponse | null;
-}
-
-/**
- * Check if a given object implements the ApiResponseOfTrustInviteLinkCreatedResponse interface.
- */
-export function instanceOfApiResponseOfTrustInviteLinkCreatedResponse(value: object): value is ApiResponseOfTrustInviteLinkCreatedResponse {
-    return true;
-}
-
-export function ApiResponseOfTrustInviteLinkCreatedResponseFromJSON(json: any): ApiResponseOfTrustInviteLinkCreatedResponse {
-    return ApiResponseOfTrustInviteLinkCreatedResponseFromJSONTyped(json, false);
-}
-
-export function ApiResponseOfTrustInviteLinkCreatedResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): ApiResponseOfTrustInviteLinkCreatedResponse {
-    if (json == null) {
-        return json;
-    }
-    return {
-        
-        'data': json['data'] == null ? undefined : TrustInviteLinkCreatedResponseFromJSON(json['data']),
-    };
-}
-
-export function ApiResponseOfTrustInviteLinkCreatedResponseToJSON(json: any): ApiResponseOfTrustInviteLinkCreatedResponse {
-    return ApiResponseOfTrustInviteLinkCreatedResponseToJSONTyped(json, false);
-}
-
-export function ApiResponseOfTrustInviteLinkCreatedResponseToJSONTyped(value?: ApiResponseOfTrustInviteLinkCreatedResponse | null, ignoreDiscriminator: boolean = false): any {
-    if (value == null) {
-        return value;
-    }
-
-    return {
-        
-        'data': TrustInviteLinkCreatedResponseToJSON(value['data']),
-    };
-}
-
