# src/BindingChaos.Web/src/api/models/CreateSocietyInviteLinkRequest.ts
@@ -1,0 +1,65 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * BindingChaos.Web.Gateway
+ * BindingChaos Web Gateway API
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * Request model for creating a society invite link.
+ * @export
+ * @interface CreateSocietyInviteLinkRequest
+ */
+export interface CreateSocietyInviteLinkRequest {
+    /**
+     * An optional private note visible only to the creator.
+     * @type {string}
+     * @memberof CreateSocietyInviteLinkRequest
+     */
+    note?: string | null;
+}
+
+/**
+ * Check if a given object implements the CreateSocietyInviteLinkRequest interface.
+ */
+export function instanceOfCreateSocietyInviteLinkRequest(value: object): value is CreateSocietyInviteLinkRequest {
+    return true;
+}
+
+export function CreateSocietyInviteLinkRequestFromJSON(json: any): CreateSocietyInviteLinkRequest {
+    return CreateSocietyInviteLinkRequestFromJSONTyped(json, false);
+}
+
+export function CreateSocietyInviteLinkRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): CreateSocietyInviteLinkRequest {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'note': json['note'] == null ? undefined : json['note'],
+    };
+}
+
+export function CreateSocietyInviteLinkRequestToJSON(json: any): CreateSocietyInviteLinkRequest {
+    return CreateSocietyInviteLinkRequestToJSONTyped(json, false);
+}
+
+export function CreateSocietyInviteLinkRequestToJSONTyped(value?: CreateSocietyInviteLinkRequest | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'note': value['note'],
+    };
+}
+
