# src/BindingChaos.Web/src/api/models/index.ts
@@ -8,6 +8,7 @@ export * from './ApiEnvelopeOfString';
 export * from './ApiResponseOfAmplifySignalResponse';
 export * from './ApiResponseOfDeamplifySignalResponse';
 export * from './ApiResponseOfEmergingPatternsFeedViewModel';
+export * from './ApiResponseOfIReadOnlyListOfSocietyInviteLinkViewResponse';
 export * from './ApiResponseOfIReadOnlyListOfTrustInviteLinkViewResponse';
 export * from './ApiResponseOfIdeaDetailViewModel';
 export * from './ApiResponseOfIdeasFeedViewModel';
@@ -20,7 +21,6 @@ export * from './ApiResponseOfSocietiesFeedViewModel';
 export * from './ApiResponseOfSocietyDetailViewModel';
 export * from './ApiResponseOfString';
 export * from './ApiResponseOfStringOf';
-export * from './ApiResponseOfTrustInviteLinkCreatedResponse';
 export * from './AttachmentDetailViewModel';
 export * from './AuthorIdeaRequest';
 export * from './CaptureSignalRequest';
@@ -28,6 +28,7 @@ export * from './ConcernListItemResponse';
 export * from './CoordinatesModel';
 export * from './CreatePostRequest';
 export * from './CreateReplyRequest';
+export * from './CreateSocietyInviteLinkRequest';
 export * from './CreateSocietyRequest';
 export * from './CreateTrustInviteLinkRequest';
 export * from './CursorDirection';
@@ -62,6 +63,7 @@ export * from './SignalViewModel';
 export * from './SignalsFeedViewModel';
 export * from './SocietiesFeedViewModel';
 export * from './SocietyDetailViewModel';
+export * from './SocietyInviteLinkViewResponse';
 export * from './SocietyListItemResponse';
 export * from './SocietyMemberResponse';
 export * from './SocietyRelationshipResponse';
@@ -69,6 +71,5 @@ export * from './SocietyResponse';
 export * from './SortDescriptor';
 export * from './SortDirection';
 export * from './SuggestedActionViewModel';
-export * from './TrustInviteLinkCreatedResponse';
 export * from './TrustInviteLinkViewResponse';
 export * from './UserInfo';
